# MediGuide-AI

./: .gitignore  README.md  chainlit.md  main.py  pyproject.toml  requirements.txt
.chainlit/: config.toml
faiss_index/: index.faiss  index.pkl
public/: test.css  test.js
