[project]
name = "mediguide-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.8.0",
    "faiss-cpu>=1.12.0",
    "guardrails-ai>=0.5.15",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-openai>=0.3.33",
    "pydantic>=2.11.9",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
]
